; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_2283.c_MakeHTTPRequest.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_2283.c_MakeHTTPRequest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i8* }

@MakeHTTPRequest.hdrs = internal global [48 x i8] c"Content-Type: application/x-www-form-urlencoded\00", align 16
@.str = private unnamed_addr constant [14 x i8] c"TigerTeam 514\00", align 1
@INTERNET_OPEN_TYPE_PRECONFIG = common dso_local global i32 0, align 4
@INTERNET_SERVICE_HTTP = common dso_local global i32 0, align 4
@INTERNET_FLAG_RELOAD = common dso_local global i32 0, align 4
@INTERNET_FLAG_IGNORE_CERT_CN_INVALID = common dso_local global i32 0, align 4
@INTERNET_FLAG_SECURE = common dso_local global i32 0, align 4
@INTERNET_FLAG_IGNORE_CERT_DATE_INVALID = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"error chungo en HttpOpenRequest\0A\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"[+] Sending Exploit ( %i bytes)\0A\00", align 1
@.str.3 = private unnamed_addr constant [28 x i8] c"[+] Ignoring unknown CA...\0A\00", align 1
@INTERNET_OPTION_SECURITY_FLAGS = common dso_local global i32 0, align 4
@SECURITY_FLAG_IGNORE_UNKNOWN_CA = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [40 x i8] c"Se ha enviado mal la peticion HTTP: %i\0A\00", align 1
@HTTP_QUERY_STATUS_CODE = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [39 x i8] c"Control de Errores - bQuery Vale NULL\0A\00", align 1
@HTTP_QUERY_CONTENT_LENGTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @MakeHTTPRequest(i8* %0, i32 %1, i8* %2, i8* %3, i32 %4, i8* %5) #0 {
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca %struct.TYPE_4__*, align 8
  %19 = alloca [32 x i8], align 16
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  store i32 32, i32* %28, align 4
  %29 = call i8* @malloc(i32 4)
  %30 = bitcast i8* %29 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %30, %struct.TYPE_4__** %18, align 8
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %32 = call i32 @memset(%struct.TYPE_4__* %31, i32 0, i32 4)
  %33 = load i32, i32* @INTERNET_OPEN_TYPE_PRECONFIG, align 4
  %34 = call i32* @InternetOpen(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %33, i32* null, i32* null, i32 0)
  store i32* %34, i32** %14, align 8
  %35 = icmp eq i32* %34, null
  br i1 %35, label %36, label %38

36:                                               ; preds = %6
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  store %struct.TYPE_4__* %37, %struct.TYPE_4__** %7, align 8
  br label %184

38:                                               ; preds = %6
  %39 = load i32*, i32** %14, align 8
  %40 = load i8*, i8** %8, align 8
  %41 = load i32, i32* %9, align 4
  %42 = load i32, i32* @INTERNET_SERVICE_HTTP, align 4
  %43 = call i32* @InternetConnect(i32* %39, i8* %40, i32 %41, i32* null, i32* null, i32 %42, i32 0, i32 1)
  store i32* %43, i32** %15, align 8
  %44 = load i32, i32* %12, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %52, label %46

46:                                               ; preds = %38
  %47 = load i32*, i32** %15, align 8
  %48 = load i8*, i8** %10, align 8
  %49 = load i8*, i8** %11, align 8
  %50 = load i32, i32* @INTERNET_FLAG_RELOAD, align 4
  %51 = call i32* @HttpOpenRequest(i32* %47, i8* %48, i8* %49, i32* null, i32* null, i32* null, i32 %50, i32 0)
  store i32* %51, i32** %16, align 8
  br label %62

52:                                               ; preds = %38
  %53 = load i32*, i32** %15, align 8
  %54 = load i8*, i8** %10, align 8
  %55 = load i8*, i8** %11, align 8
  %56 = load i32, i32* @INTERNET_FLAG_IGNORE_CERT_CN_INVALID, align 4
  %57 = load i32, i32* @INTERNET_FLAG_SECURE, align 4
  %58 = or i32 %56, %57
  %59 = load i32, i32* @INTERNET_FLAG_IGNORE_CERT_DATE_INVALID, align 4
  %60 = or i32 %58, %59
  %61 = call i32* @HttpOpenRequest(i32* %53, i8* %54, i8* %55, i32* null, i32* null, i32* null, i32 %60, i32 0)
  store i32* %61, i32** %16, align 8
  br label %62

62:                                               ; preds = %52, %46
  %63 = load i32*, i32** %16, align 8
  %64 = icmp eq i32* %63, null
  br i1 %64, label %65, label %68

65:                                               ; preds = %62
  %66 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  %67 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  store %struct.TYPE_4__* %67, %struct.TYPE_4__** %7, align 8
  br label %184

68:                                               ; preds = %62
  %69 = load i8*, i8** %13, align 8
  %70 = icmp eq i8* %69, null
  br i1 %70, label %71, label %75

71:                                               ; preds = %68
  %72 = load i32*, i32** %16, align 8
  %73 = call i32 @strlen(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @MakeHTTPRequest.hdrs, i64 0, i64 0))
  %74 = call i32 @HttpSendRequest(i32* %72, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @MakeHTTPRequest.hdrs, i64 0, i64 0), i32 %73, i8* null, i32 0)
  store i32 %74, i32* %17, align 4
  br label %119

75:                                               ; preds = %68
  %76 = load i8*, i8** %13, align 8
  %77 = call i32 @strlen(i8* %76)
  %78 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0), i32 %77)
  %79 = load i32*, i32** %16, align 8
  %80 = call i32 @strlen(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @MakeHTTPRequest.hdrs, i64 0, i64 0))
  %81 = load i8*, i8** %13, align 8
  %82 = load i8*, i8** %13, align 8
  %83 = call i32 @strlen(i8* %82)
  %84 = call i32 @HttpSendRequest(i32* %79, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @MakeHTTPRequest.hdrs, i64 0, i64 0), i32 %80, i8* %81, i32 %83)
  store i32 %84, i32* %17, align 4
  %85 = load i32, i32* %17, align 4
  %86 = icmp ne i32 %85, 0
  br i1 %86, label %111, label %87

87:                                               ; preds = %75
  %88 = load i32, i32* %12, align 4
  %89 = icmp ne i32 %88, 0
  br i1 %89, label %90, label %111

90:                                               ; preds = %87
  store i32 4, i32* %20, align 4
  %91 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.3, i64 0, i64 0))
  %92 = load i32*, i32** %16, align 8
  %93 = load i32, i32* @INTERNET_OPTION_SECURITY_FLAGS, align 4
  %94 = ptrtoint i32* %21 to i32
  %95 = call i32 @InternetQueryOption(i32* %92, i32 %93, i32 %94, i32* %20)
  %96 = load i32, i32* @SECURITY_FLAG_IGNORE_UNKNOWN_CA, align 4
  %97 = load i32, i32* %21, align 4
  %98 = or i32 %97, %96
  store i32 %98, i32* %21, align 4
  %99 = load i32*, i32** %16, align 8
  %100 = load i32, i32* @INTERNET_OPTION_SECURITY_FLAGS, align 4
  %101 = call i32 @InternetSetOption(i32* %99, i32 %100, i32* %21, i32 4)
  %102 = load i8*, i8** %13, align 8
  %103 = call i32 @strlen(i8* %102)
  %104 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0), i32 %103)
  %105 = load i32*, i32** %16, align 8
  %106 = call i32 @strlen(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @MakeHTTPRequest.hdrs, i64 0, i64 0))
  %107 = load i8*, i8** %13, align 8
  %108 = load i8*, i8** %13, align 8
  %109 = call i32 @strlen(i8* %108)
  %110 = call i32 @HttpSendRequest(i32* %105, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @MakeHTTPRequest.hdrs, i64 0, i64 0), i32 %106, i8* %107, i32 %109)
  store i32 %110, i32* %17, align 4
  br label %111

111:                                              ; preds = %90, %87, %75
  %112 = load i32, i32* %17, align 4
  %113 = icmp ne i32 %112, 0
  br i1 %113, label %118, label %114

114:                                              ; preds = %111
  %115 = call i32 (...) @GetLastError()
  %116 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.4, i64 0, i64 0), i32 %115)
  %117 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  store %struct.TYPE_4__* %117, %struct.TYPE_4__** %7, align 8
  br label %184

118:                                              ; preds = %111
  br label %119

119:                                              ; preds = %118, %71
  %120 = load i32*, i32** %16, align 8
  %121 = load i32, i32* @HTTP_QUERY_STATUS_CODE, align 4
  %122 = getelementptr inbounds [32 x i8], [32 x i8]* %19, i64 0, i64 0
  %123 = call i64 @HttpQueryInfo(i32* %120, i32 %121, i8* %122, i32* %28, i32* null)
  store i64 %123, i64* %22, align 8
  %124 = load i64, i64* %22, align 8
  %125 = icmp ne i64 %124, 0
  br i1 %125, label %129, label %126

126:                                              ; preds = %119
  %127 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.5, i64 0, i64 0))
  %128 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  store %struct.TYPE_4__* %128, %struct.TYPE_4__** %7, align 8
  br label %184

129:                                              ; preds = %119
  %130 = getelementptr inbounds [32 x i8], [32 x i8]* %19, i64 0, i64 0
  %131 = call i64 @atol(i8* %130)
  %132 = trunc i64 %131 to i32
  %133 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %134 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %133, i32 0, i32 0
  store i32 %132, i32* %134, align 8
  store i32 32, i32* %28, align 4
  %135 = load i32*, i32** %16, align 8
  %136 = load i32, i32* @HTTP_QUERY_CONTENT_LENGTH, align 4
  %137 = getelementptr inbounds [32 x i8], [32 x i8]* %19, i64 0, i64 0
  %138 = call i64 @HttpQueryInfo(i32* %135, i32 %136, i8* %137, i32* %28, i32* null)
  store i64 %138, i64* %22, align 8
  %139 = getelementptr inbounds [32 x i8], [32 x i8]* %19, i64 0, i64 0
  %140 = call i64 @atol(i8* %139)
  %141 = trunc i64 %140 to i32
  store i32 %141, i32* %26, align 4
  %142 = load i32, i32* %26, align 4
  %143 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %144 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %143, i32 0, i32 1
  store i32 %142, i32* %144, align 4
  %145 = load i32, i32* %26, align 4
  %146 = icmp eq i32 %145, 0
  br i1 %146, label %147, label %157

147:                                              ; preds = %129
  %148 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %149 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %148, i32 0, i32 2
  store i8* null, i8** %149, align 8
  %150 = load i32*, i32** %16, align 8
  %151 = call i32 @InternetCloseHandle(i32* %150)
  %152 = load i32*, i32** %15, align 8
  %153 = call i32 @InternetCloseHandle(i32* %152)
  %154 = load i32*, i32** %14, align 8
  %155 = call i32 @InternetCloseHandle(i32* %154)
  %156 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  store %struct.TYPE_4__* %156, %struct.TYPE_4__** %7, align 8
  br label %184

157:                                              ; preds = %129
  %158 = load i32, i32* %26, align 4
  %159 = add nsw i32 %158, 1
  %160 = call i8* @malloc(i32 %159)
  %161 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %162 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %161, i32 0, i32 2
  store i8* %160, i8** %162, align 8
  %163 = load i32*, i32** %16, align 8
  %164 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %165 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %164, i32 0, i32 2
  %166 = load i8*, i8** %165, align 8
  %167 = load i32, i32* %26, align 4
  %168 = call i64 @InternetReadFile(i32* %163, i8* %166, i32 %167, i32* %27)
  store i64 %168, i64* %23, align 8
  %169 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %170 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %169, i32 0, i32 2
  %171 = load i8*, i8** %170, align 8
  %172 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %173 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %172, i32 0, i32 1
  %174 = load i32, i32* %173, align 4
  %175 = sext i32 %174 to i64
  %176 = getelementptr inbounds i8, i8* %171, i64 %175
  store i8 0, i8* %176, align 1
  %177 = load i32*, i32** %16, align 8
  %178 = call i32 @InternetCloseHandle(i32* %177)
  %179 = load i32*, i32** %15, align 8
  %180 = call i32 @InternetCloseHandle(i32* %179)
  %181 = load i32*, i32** %14, align 8
  %182 = call i32 @InternetCloseHandle(i32* %181)
  %183 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  store %struct.TYPE_4__* %183, %struct.TYPE_4__** %7, align 8
  br label %184

184:                                              ; preds = %157, %147, %126, %114, %65, %36
  %185 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  ret %struct.TYPE_4__* %185
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32* @InternetOpen(i8*, i32, i32*, i32*, i32) #1

declare dso_local i32* @InternetConnect(i32*, i8*, i32, i32*, i32*, i32, i32, i32) #1

declare dso_local i32* @HttpOpenRequest(i32*, i8*, i8*, i32*, i32*, i32*, i32, i32) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @HttpSendRequest(i32*, i8*, i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @InternetQueryOption(i32*, i32, i32, i32*) #1

declare dso_local i32 @InternetSetOption(i32*, i32, i32*, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i64 @HttpQueryInfo(i32*, i32, i8*, i32*, i32*) #1

declare dso_local i64 @atol(i8*) #1

declare dso_local i32 @InternetCloseHandle(i32*) #1

declare dso_local i64 @InternetReadFile(i32*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
